tests/warn/param-control.jo
import jo.IO.stdout

param pageWidth: Int
param newLine: String

def pretty(s: String): Unit =
  println pageWidth

def normalize(s: String): Unit =
  print s
  print newLine

def foo() =
  allow stdout in pretty "hello, world!"  // error
  allow stdout, newLine in normalize "hello, world!"

def bar() =
  print
    "Bonjour!" + newLine

def main receives stdout =  // error
  foo with pageWidth = 100, newLine = "\n"
  bar
